# 42run

./: .gitattributes  .gitignore  42runConfig.h.in  CMakeLists.txt
cmake/: SetupExternalLibraries.cmake
lib/glad/: CMakeLists.txt
lib/glad/src/: gl.c
lib/glm/: CMakeLists.txt
lib/stb/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
lib/tinygltf/: CMakeLists.txt  tiny_gltf.h
resources/models/: spheres.glb  spheres_smooth.glb
resources/shaders/: brdf.frag  cubemap.vert  default.frag  default.vert  equirectangular_to_cubemap.frag  hdr.frag  irradiance.frag  pbr.frag  pbr.vert  prefilter.frag  skybox.frag  skybox.vert  texcoord.vert
shaders/: default.frag  default.vert
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Image.ixx  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramVariants.cpp  ShaderProgramVariants.hpp  Time.ixx  logger.hpp  macros.h  main.cpp  main.ixx  tiny_gltf_impl.cpp
src/Components/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  CameraController.h  Components.ixx  Components_Animator.cpp  Components_Animator.ixx  Components_CameraController.ixx  Components_ImguiSingleton.cpp  Components_ImguiSingleton.ixx  Components_MapController.cpp  Components_MapController.ixx  Components_MeshRenderer.cpp  Components_MeshRenderer.ixx  Components_PlayerController.cpp  Components_PlayerController.ixx  Components_UserInterface.cpp  Components_UserInterface.ixx  Engine_Camera.cpp  Engine_Camera.ixx  ImguiSingleton.h  MapController.cpp  MapController.h  MeshRenderer.cpp  MeshRenderer.h  PlayerController.cpp  PlayerController.h  SkyboxRenderer.ixx  UserInterface.cpp  UserInterface.h
src/DataCache/: DataCache.cpp  DataCache.ixx
src/Engine/: Animation.cpp  Animation.ixx  AnimationChannel.ixx  AnimationSampler.cpp  AnimationSampler.h  AnimationSampler.ixx  Engine.cpp  Engine.h  Engine.ixx  EngineComponent.h  Engine_Animation.cpp  Engine_Animation.ixx  Engine_AnimationSampler.cpp  Engine_AnimationSampler.ixx  Engine_Component.ixx  Engine_Engine.cpp  Engine_Engine.ixx  Engine_FrameInfo.ixx  Engine_Mesh.cpp  Engine_Mesh.ixx  Engine_Model.cpp  Engine_Model.ixx  Engine_Object.cpp  Engine_Object.ixx  Engine_ObjectsManager.cpp  Engine_ObjectsManager.ixx  Engine_Transform.cpp  Engine_Transform.ixx  FrameInfo.ixx  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectsManager.cpp  ObjectsManager.h  RenderInfo.ixx  Transform.cpp  Transform.h
src/InterfaceBlocks/: AnimationInterfaceBlock.cpp  AnimationInterfaceBlock.h  CameraTargetInterfaceBlock.cpp  DisplayInterfaceBlock.cpp  InterfaceBlocks.ixx  InterfaceBlocks_AnimationInterfaceBlock.cpp  InterfaceBlocks_AnimationInterfaceBlock.ixx  InterfaceBlocks_DisplayInterfaceBlock.cpp  InterfaceBlocks_DisplayInterfaceBlock.ixx
src/OpenGL/: Cubemap.cpp  Cubemap.ixx  Cubemap_Builder.ixx  OpenGL.ixx  OpenGL_Debug.ixx  OpenGL_IndicesBuffer.cpp  OpenGL_IndicesBuffer.ixx  OpenGL_Pipeline.cpp  OpenGL_Pipeline.ixx  OpenGL_Shader.cpp  OpenGL_Shader.ixx  OpenGL_ShaderProgram.cpp  OpenGL_ShaderProgram.ixx  OpenGL_ShaderProgramInstance.cpp  OpenGL_ShaderProgramInstance.ixx  OpenGL_VertexArray.cpp  OpenGL_VertexArray.ixx  OpenGL_VertexBuffer.cpp  OpenGL_VertexBuffer.ixx  Shader.cpp  Shader.h  Shader.ixx  ShaderFile.ixx  ShaderFlags.ixx  ShaderManager.ixx  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.ixx  ShaderProgramInstance.cpp  ShaderProgramInstance.h  Texture2D.cpp  Texture2D.ixx  UniformValue.ixx  Utility.ixx  VertexArray.cpp  VertexArray.h
src/OpenGL/Buffer/: Buffer.cpp  Buffer.ixx  Buffer_Builder.ixx
src/OpenGL/Cubemap/: Cubemap.cpp  Cubemap.ixx  Cubemap_Builder.ixx
src/OpenGL/Program/: Pipeline.ixx  RenderPass.ixx
src/OpenGL/Texture2D/: Texture2D.cpp  Texture2D.ixx  Texture2D_Builder.ixx
src/OpenGL2/: Buffer.cpp  Buffer.ixx  Buffer_Builder.ixx  Cubemap2.cpp  Cubemap2.ixx  Cubemap2_Builder.ixx  StateCache.ixx  Texture2D2.cpp  Texture2D2.ixx  Texture2D2_Builder.ixx  glToString.ixx
src/Utility/: EnumHelpers.h  SlotSet.h  SlotSet.ixx  StridedIterator.ixx  StringUnorderedMap.ixx  Utility.ixx  Utility_SlotSet.ixx  Utility_StridedIterator.ixx  Utility_StringUnorderedMap.ixx  Utility_VectorMultiMap.ixx  VectorMultiMap.h  VectorMultiMap.ixx
src/Window/: Window.h  Window.ixx  WindowContext.h  Window_Context.cpp  Window_Context.ixx  Window_Controls.ixx  Window_Window.cpp  Window_Window.h  Window_Window.ixx
src/utils/: string_unordered_map.hpp
